[package]
authors = ["pleme-io"]
description = "lava-modules — typed (deflava-module …) reusable sub-architectures for the lava + tatara-lisp ecosystem. Module = typed inputs → typed resources → typed outputs. Architectures consume modules by name + binding bag; the typed registry validates the interface contract before any resource is built. Terraform-module analog."
edition = "2024"
license = "MIT"
name = "lava-modules"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-modules"
version = "0.1.3"

[lib]
name = "lava_modules"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
lava-core = { git = "https://github.com/pleme-io/lava-core", branch = "main" }
lava-eval = { git = "https://github.com/pleme-io/lava-eval", branch = "main" }
lava-schema = { git = "https://github.com/pleme-io/lava-schema", branch = "main" }
lava-types = { git = "https://github.com/pleme-io/lava-types", branch = "main" }
